@@ -9,6 +9,14 @@ upgrade information!
 ENHANCEMENTS
 * re-add services below hostgroup linked to hosts #2136
 * add --with-treerewrite-method=MainOverLink|None to configure #2286
+* add debug verbosity level to LConfExport #2288
+
+FIXES
+* fix service data returning from a link walk is messed up #2270
+
+SUPPORT
+* add TreeBuilder processing level to debug output #2290
+
 
 1.3.0 - 27/05/2013
 
